[package]
name = "voxel_ray_traversal"
version = "0.1.0"
edition = "2021"

[dependencies]
vulkano = "0.35.2"
winit = "0.30.12"

shaderc = "0.8.3"
egui_winit_vulkano = "0.28.0"
winit_input_helper = { git = "https://github.com/rukai/winit_input_helper", rev = "638b12fe73b8eb08ed9a8a107d554f4c3b99e8cf" }

nalgebra = { version = "0.34.0", features = ["bytemuck"] }
bytemuck = { version = "1.23.2", features = ["derive"] }

notify = "8.2.0"
ply-rs = "0.1.3"

image = "0.25.6"
crossterm = "0.29.0"
